# brain

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
configs/: guilds.yaml
src/: cli.py
src/api/: server.py
src/core/: backends.py  brain.py  models.py  orchestrator.py  registry.py  router.py
tests/: conftest.py  test_api.py  test_orchestrator.py  test_registry.py  test_router.py
