[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guildlm-brain"
version = "0.1.0"
description = "Central router/orchestrator for GuildLM — classifies intent and routes to specialist guild SLMs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "GuildLM" }]
keywords = ["llm", "routing", "orchestration", "agents", "slm"]
dependencies = [
    "openai>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
brain = "src.cli:app"

[tool.setuptools]
packages = ["src", "src.core", "src.api", "src.protocols"]

[tool.setuptools.package-data]
"*" = ["configs/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
